<resources>
    <string name="app_name" translatable="false">Distance From Me</string>
    <string name="action_bar_search_title">Search</string>
    <string name="action_bar_search_hint">Search Distance From Me</string>
    <string name="menu_legal_notices_title">Legal notices</string>
    <string name="menu_load_title">Load distance</string>
    <string name="menu_rate_app_title">Rate app</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_help_feedback_title" translatable="false">Help &amp; feedback</string>
    <string name="menu_about_title" translatable="false">Open source</string>
    <string name="menu_open_license_browser_title" translatable="false">Open in browser</string>
    <string name="progressdialog_search_position_title">Searching</string>
    <string name="progressdialog_search_position_message">Please wait\u2026</string>
    <string name="toast_loading_position">Searching your position. Please, wait</string>
    <string name="toast_no_find_address">No backend service available or very poor network signal. Try again in a while</string>
    <string name="toast_no_results">No matches were found</string>
    <string name="dialog_connection_problems_title">Connection problems</string>
    <string name="dialog_connection_problems_message">No wireless or network connection available, would you like to enable?</string>
    <string name="dialog_connection_problems_negative_button">Do nothing</string>
    <string name="dialog_connection_problems_positive_button">Enable</string>
    <string name="dialog_select_address_title">Select an address</string>
    <string name="dialog_load_distances_title">Choose a distance</string>
    <string name="dialog_rate_app_title">Rate this app</string>
    <string name="dialog_rate_app_message">If you enjoy using Distance From Me, please give 5 stars and write a nice comment. Anyway, you can also contact the dev team if you have any suggestion, problem,\u2026</string>
    <string name="dialog_rate_app_positive_button">Go to Play Store</string>
    <string name="dialog_rate_app_negative_button">Contact us!</string>
    <string name="navigation_drawer_starting_point_current_position_item">Current position</string>
    <string name="navigation_drawer_starting_point_any_position_item">Any position</string>
    <string name="elevation_chart_title">Elevation profile (%s)</string>
    <string name="toast_first_point_needed">Starting point needed. Please select a point.</string>
    <string name="toast_distances_deleted">Distances deleted</string>
    <string name="category_centre_title">Distance measure</string>
    <string name="dialog_centre_map_title">Centre map</string>
    <string name="preference_centre_map_title">Centre map</string>
    <string name="preference_centre_map_summary">Where pointing the map at distance measuring</string>
    <string name="animation_destination_item">Centre in destination</string>
    <string name="animation_center_item">Centre in the middle</string>
    <string name="no_animation_item">No animation</string>
    <string name="animation_destination_code" translatable="false">DES</string>
    <string name="animation_center_code" translatable="false">CEN</string>
    <string name="no_animation_code" translatable="false">NO</string>
    <string name="preference_show_elevation_title">Show elevation profile</string>
    <string name="preference_show_elevation_summary">Calculates elevation profile. This task may take some time depending on your network.</string>
    <string name="category_db_title">Distance register</string>
    <string name="preference_delete_distances_title">Delete distances</string>
    <string name="preference_delete_distances_summary">Touch to delete all saved distances</string>
    <string name="category_unit_title">Unit of measurement</string>
    <string name="preference_unit_summary">Choose a unit of measurement. By default, it is set regarding your current device language.</string>
    <string name="preference_unit_title">Select preferred unit</string>
    <string name="preference_unit_dialog_title">Select unit</string>
    <string name="preference_unit_entry_EU">meters, kilometers</string>
    <string name="preference_unit_entry_US">miles, yards, feet</string>
    <string name="preference_unit_entry_value_EU" translatable="false">EU</string>
    <string name="preference_unit_entry_value_US" translatable="false">US</string>
    <string-array name="preferred_unit_entries">
        <item>@string/preference_unit_entry_EU</item>
        <item>@string/preference_unit_entry_US</item>
    </string-array>
    <string-array name="preferred_unit_entryValues">
        <item>@string/preference_unit_entry_value_EU</item>
        <item>@string/preference_unit_entry_value_US</item>
    </string-array>
    <string name="action_bar_item_social_share_title">Share</string>
    <string name="action_bar_item_refresh_title">Refresh data</string>
    <string name="action_bar_item_save_title">Save</string>
    <string name="info_current_position_title">Current estimated position:</string>
    <string name="info_destination_position_title">Estimated destination:</string>
    <string name="info_distance_title">Distance: %s</string>
    <string name="error_no_address_found_message">No address found for location</string>
    <string name="share_distance_from_message">From</string>
    <string name="share_distance_to_message">To</string>
    <string name="share_distance_there_are_message">There are</string>
    <string name="toast_no_location_found">Error trying to get address. Use refresh button</string>
    <string name="toast_network_problems">Wireless connection failed. Turn on your wireless connection and try again refreshing</string>
    <string name="alias_dialog_title">Alias</string>
    <string name="alias_dialog_message">Assign an alias to this distance:</string>
    <string name="alias_dialog_accept">Accept</string>
    <string name="alias_dialog_with_name_toast">Distance \"%s\" correctly saved</string>
    <string name="alias_dialog_no_name_toast">Distance correctly saved</string>
    <string name="toast_send_feedback_error">There are no email clients installed</string>
    <string name="feedback_device_info_comments" translatable="false">%s\n\nYour comments:\n</string>
    <string name="feedback_email_subject" translatable="false">[Distance From Me] Feedback</string>
    <string name="doubt_not_answered_send_feedback_action" translatable="false">Didn\'t find an answer to your question in this section? Contact us!</string>
    <string name="faq_error_message" translatable="false">Unable to get questions, try again later.</string>
    <string name="transition_opensourcelibrary_name" translatable="false">transition_opensourcelibrary_name</string>
    <string name="transition_opensourcelibrary_description" translatable="false">transition_opensourcelibrary_description</string>
    <string name="opensourcelibrary_error_message" translatable="false">Unable to get open source libraries, try again later.</string>
    <string name="license_mit" translatable="false">The MIT License\n\nCopyright (c) %s %s\n\nPermission is hereby granted, free of charge, to any person obtaining a copy\nof this software and associated documentation files (the \"Software\"), to deal\nin the Software without restriction, including without limitation the rights\nto use, copy, modify, merge, publish, distribute, sublicense, and/or sell\ncopies of the Software, and to permit persons to whom the Software is\nfurnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in\nall copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\nIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\nFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\nAUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\nLIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\nOUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\nTHE SOFTWARE.</string>
    <string name="license_apache2" translatable="false">Copyright %s %s\n\nLicensed under the Apache License, Version 2.0 (the \"License\");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\n    http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an \"AS IS\" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.</string>
</resources>