<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 David Aguiar Gonzalez
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_centre_title">
        <ListPreference
            android:defaultValue="CEN"
            android:dialogTitle="@string/dialog_centre_map_title"
            android:entries="@array/centre_animation_entries"
            android:entryValues="@array/centre_animation_entryValues"
            android:key="animation"
            android:summary="@string/preference_centre_map_summary"
            android:title="@string/preference_centre_map_title"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="elevation_chart"
            android:summary="@string/preference_show_elevation_summary"
            android:title="@string/preference_show_elevation_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_db_title">
        <Preference
            android:key="bbdd"
            android:summary="@string/preference_delete_distances_summary"
            android:title="@string/preference_delete_distances_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_unit_title">
        <ListPreference
            android:key="unit"
            android:summary="@string/preference_unit_summary"
            android:dialogTitle="@string/preference_unit_dialog_title"
            android:title="@string/preference_unit_title"
            android:entries="@array/preferred_unit_entries"
            android:entryValues="@array/preferred_unit_entryValues"/>
    </PreferenceCategory>

</PreferenceScreen>